# solarshed

./: Dockerfile  LICENSE  pyproject.toml  readme.rst  requirements.txt  setup.py
grafana/: basic_solarshed_dashboard.json
prometheus/: metrics_export.py
solarshed/: server.py
solarshed/controllers/: renogy_rover.py
systemd/: solarshed.service
