[tool.poetry]
name = "solarshed"
version = "0.2.0"
description = "solarshed"
authors = ["Brian S. Corbin <corbinbs@engineer1.org>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
MinimalModbus = "1.0.2"
pyserial = "3.5"
prometheus_client = "0.9.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
